tests/algorithms/x/Rust/maths/numerical_analysis/intersection.rs
// Generated by Mochi transpiler v0.10.67
use std::collections::HashMap;
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn main() {
        let _start: i64 = _now();
    fn abs_float(mut x: f64) -> f64 {
    if (x < 0.0) {
        return -x
    }
    return x
};
    let mut intersection = |function: &mut dyn FnMut(f64) -> f64, x0: f64, x1: f64| -> f64 {
    let mut x_n: f64 = x0;
    let mut x_n1: f64 = x1;
    loop {
        if ((x_n == x_n1) || (function(x_n1) == function(x_n))) {
            panic!("float division by zero, could not find root");
        }
        let numerator: f64 = function(x_n1);
        let denominator: f64 = ((function(x_n1) - function(x_n)) / (x_n1 - x_n));
        let x_n2: f64 = (x_n1 - (numerator / denominator));
        if (abs_float((x_n2 - x_n1)) < 0.00001) {
            return x_n2
        }
        x_n = x_n1;
        x_n1 = x_n2;
    }
};
    fn f(mut x: f64) -> f64 {
    return ((((x * x) * x) - (2.0 * x)) - 5.0)
};
    fn mochi_main() {
    println!("{}", intersection(&mut f, 3.0, 3.5).to_string());
};
    mochi_main();
    let _end: i64 = _now();
    let duration_us: i64 = ((_end - _start) / 1000);
    let memory_bytes: i64 = _mem();
    println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

}
